# gps-trips

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml
.claude/: memory.db  settings.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.claude/helpers/: helpers.manifest.json  statusline.cjs
.devcontainer/: devcontainer-lock.json  devcontainer.json
docs/: architecture.md  deployment.md  initial_plan.md  komoot-api.md  plan.md  qmapshack-format.md  qmapshack.md  requirements.md
docs/adr/: 0001-rust-leptos-fullstack.md  0002-sqlite-local-disk.md  0003-track-as-geojson-blob-in-sqlite.md  0004-import-via-axum-multipart.md  0005-leaflet-osm-via-wasm-interop.md  0006-uplot-elevation-chart.md  0007-blobstore-abstraction.md  0008-json-first-api.md  0009-utc-timestamp-normalization.md  0010-single-user-optional-auth.md  0011-filtering-search-geo-queries.md  0012-tdd-test-strategy.md  0013-integer-surrogate-keys.md  0014-defer-deployment-topology.md  0015-db-model-response-type-separation.md  0016-assets-relative-to-executable.md  0017-kamadak-exif-for-gps-extraction.md  0018-enums-for-closed-string-sets.md  0019-tzf-rs-time-tz-for-timezone-lookup.md  0020-image-crate-for-thumbnails.md  0021-reverse-engineered-komoot-client.md  0022-qmapshack-export.md  README.md
docs/qmapshack_analysis/: format_test.db
migrations/: 0001_init.sql  0002_track_original_gpx.sql  0003_photo.sql  0004_photo_location.sql  0005_trip_timezone.sql  0006_photo_thumbnail.sql  0007_trip_filter_indexes.sql  0008_trip_komoot_link.sql  0009_trip_kind.sql  0010_tag.sql
public/js/: komoot_sync.js  trip_detail.js  trip_list.js
src/: config.rs  lib.rs  main.rs
src/models/: activity_type.rs  location_source.rs  mod.rs  photo.rs  tag.rs  trip_detail.rs  trip_kind.rs  trip_summary.rs
src/server/: db.rs  delete.rs  edit.rs  error.rs  filter.rs  geojson.rs  gpx.rs  http.rs  import.rs  komoot.rs  komoot_sport.rs  komoot_sync.rs  location.rs  mod.rs  paths.rs  photos.rs  placement.rs  (+7 more)
tests/: us10_self_host.rs  us11_activity_type.rs  us13_filter_trips.rs  us15_edit_trip.rs  us1_import.rs  us21_download_original_gpx.rs  us25_sync_halts_on_failure.rs  us26_sync_blocks_concurrent_edits.rs  us2_photos.rs  us31_trip_kind_import.rs  us32_trip_kind_tabs.rs  us33_tag_trips.rs  us34_bulk_tag_trips.rs  us38_filter_by_tag.rs  us3_photo_map_placement.rs  us4_photo_timestamp_interpolation.rs  us5_thumbnails.rs  us6_trip_list.rs  us7_trip_detail.rs  us9_delete_trip.rs
(+24 files in other folders)
