[package]
name = "trip-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum  = { version = "0.7", features = ["multipart"] }
tokio = { version = "1",   features = ["rt-multi-thread", "macros", "net"] }

# Persistence — SQLite via sqlx (ADR-0002); timestamps stored as RFC-3339 TEXT
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

# Domain: GPX parsing, geodesic stats, time
gpx  = "0.10"
geo  = "0.28"
time = { version = "0.3", features = ["formatting", "macros"] }

# Serialization (track GeoJSON blob + JSON models)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors & logging
anyhow             = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tower    = { version = "0.4", features = ["util"] } # ServiceExt::oneshot in tests
